# ros-phidgets-ir

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
codes/: channeldown_tivo.pkl  channelup_tivo.pkl  epson_proj_esc.pkl  epson_proj_menu.pkl  epson_proj_onoff.pkl  onoff.pkl  onoff_samsung.pkl  volumedown_samsung.pkl  volumeup_samsung.pkl
nodes/: ir_node.py  learn.py  retransmit.py  transmit_one.py  volup.pkl
src/ir_comm/: device.py  utils.py
